@@ -296,7 +296,7 @@
   </profileDesc>
  </idsHeader>
  <idsDoc type="text" version="1.0" TEIform="TEI.2">
-  <idsHeader type="document" pattern="text" status="new" version="1.1" TEIform="teiHeader">
+  <idsHeader type="doc" pattern="text" status="new" version="1.1" TEIform="teiHeader">
    <fileDesc>
     <titleStmt>
      <dokumentSigle>GOE/AGA</dokumentSigle>
